--- a/gradle.properties
+++ b/gradle.properties
@@ -1,36 +1,32 @@
 # Important Notes:
-# Every field you add must be added to the root build.gradle expandProps map.
+# Every field you add must be added to the multiloader-common build.gradle expandProps map.
 
 # Project
-version=20.6.0
+version=21.0.0
 group=com.diontryban.flourish
 java_version=21
 
 # Common
-minecraft_version=1.20.6
 mod_name=Flourish
 mod_author=Trikzon
 mod_id=flourish
 license=LGPL-3.0-or-later
 credits=
 description=Spread small flowers with bonemeal.
-minecraft_version_range=[1.20.3, 1.21)
-ash_version=20.6.2-beta
+minecraft_version=1.21
+minecraft_version_range=[1.21, 1.22)
+ash_version=21.0.1-beta
 
 # Fabric
-fabric_version=0.98.0+1.20.6
+fabric_version=0.100.3+1.21
 fabric_loader_version=0.15.11
-modmenu_version=10.0.0-beta.1
-
-# Forge
-forge_version=50.0.8
-forge_loader_version_range=[50,)
-forge_version_range=[50,)
+modmenu_version=11.0.0
 
 # NeoForge
-neoforge_version=20.6.48-beta
-neoforge_loader_version_range=[1,)
+neoforge_version=21.0.21-beta
+neoforge_loader_version_range=[4,)
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+org.gradle.configuration-cache=true
