--- a/buildSrc/src/main/groovy/multiloader-common.gradle
+++ b/buildSrc/src/main/groovy/multiloader-common.gradle
@@ -23,7 +23,16 @@ repositories {
                 url = 'https://repo.spongepowered.org/repository/maven-public'
             }
         }
-        filter { includeGroupAndSubgroups("org.spongepowered") }
+        filter { includeGroupAndSubgroups('org.spongepowered') }
+    }
+    exclusiveContent {
+        forRepository {
+            maven {
+                name = 'ParchmentMC'
+                url = 'https://maven.parchmentmc.org/'
+            }
+        }
+        filter { includeGroup('org.parchmentmc.data') }
     }
     maven {
         name = 'BlameJared'
@@ -52,13 +61,13 @@ dependencies {
 }
 
 sourcesJar {
-    from(rootProject.file("LICENSE")) {
+    from(rootProject.file('LICENSE')) {
         rename { "${it}_${mod_name}" }
     }
 }
 
 jar {
-    from(rootProject.file("LICENSE")) {
+    from(rootProject.file('LICENSE')) {
         rename { "${it}_${mod_name}" }
     }
 
@@ -77,23 +86,23 @@ jar {
 
 processResources {
     def expandProps = [
-            "version": version,
-            "group": project.group, //Else we target the task's group.
-            "java_version": java_version,
-            "mod_name": mod_name,
-            "mod_author": mod_author,
-            "mod_id": mod_id,
-            "license": license,
-            "credits": credits,
-            "description": project.description,
-            "minecraft_version": minecraft_version,
-            "minecraft_version_range": minecraft_version_range,
-            "ash_version": ash_version,
-            "fabric_version": fabric_version,
-            "fabric_loader_version": fabric_loader_version,
-            "modmenu_version": modmenu_version,
-            "neoforge_version": neoforge_version,
-            "neoforge_loader_version_range": neoforge_loader_version_range
+            'version': version,
+            'group': project.group, //Else we target the task's group.
+            'java_version': java_version,
+            'mod_name': mod_name,
+            'mod_author': mod_author,
+            'mod_id': mod_id,
+            'license': license,
+            'credits': credits,
+            'description': project.description,
+            'minecraft_version': minecraft_version,
+            'minecraft_version_range': minecraft_version_range,
+            'ash_version': ash_version,
+            'fabric_version': fabric_version,
+            'fabric_loader_version': fabric_loader_version,
+            'modmenu_version': modmenu_version,
+            'neoforge_version': neoforge_version,
+            'neoforge_loader_version_range': neoforge_loader_version_range
     ]
 
     filesMatching(['pack.mcmeta', 'fabric.mod.json', 'META-INF/neoforge.mods.toml', '*.mixins.json']) {
