--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,11 @@ credits=
 description=Spread small flowers with bonemeal.
 minecraft_version=1.21
 minecraft_version_range=[1.21, 1.22)
+# https://projects.neoforged.net/neoforged/neoform
+neo_form_version=1.21-20240613.152323
+# https://parchmentmc.org/docs/getting-started#choose-a-version
+parchment_minecraft=1.21
+parchment_version=2024.07.07
 ash_version=21.0.1-beta
 
 # Fabric
@@ -23,7 +28,7 @@ fabric_loader_version=0.15.11
 modmenu_version=11.0.0
 
 # NeoForge
-neoforge_version=21.0.21-beta
+neoforge_version=21.0.114-beta
 neoforge_loader_version_range=[4,)
 
 # Gradle
