--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -1,10 +1,10 @@
 plugins {
     id 'multiloader-loader'
-    id 'net.neoforged.moddev' version '1.0.14'
+    id 'net.neoforged.moddev'
 }
 
 neoForge {
-    version = project.neoforge_version
+    version = neoforge_version
 
     validateAccessTransformers = true
 
@@ -13,35 +13,28 @@ neoForge {
         accessTransformers.add(at.absolutePath);
     }
 
+    parchment {
+        minecraftVersion = parchment_minecraft
+        mappingsVersion = parchment_version
+    }
+
     runs {
+        configureEach {
+            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
+            // Unify the run config names with fabric
+            ideName = "NeoForge ${it.name.capitalize()} (${project.path})"
+        }
+
         client {
             client()
-
-            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
-        }
-
-        server {
-            server()
-
-            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
-            programArgument '--nogui'
-        }
-
-        gameTestServer {
-            type = 'gameTestServer'
-            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
         }
 
         data {
             data()
-
-            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
         }
 
-        configureEach {
-            systemProperty 'forge.logging.markers', 'REGISTRIES'
-
-            logLevel = org.slf4j.event.Level.DEBUG
+        server {
+            server()
         }
     }
 
