--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # Every field you add must be added to the multiloader-common build.gradle expandProps map.
 
 # Project
-version=21.0.0
+version=21.4.0
 group=com.diontryban.flourish
 java_version=21
 
@@ -13,22 +13,22 @@ mod_id=flourish
 license=LGPL-3.0-or-later
 credits=
 description=Spread small flowers with bonemeal.
-minecraft_version=1.21
+minecraft_version=1.21.4
 minecraft_version_range=[1.21, 1.22)
 # https://projects.neoforged.net/neoforged/neoform
-neo_form_version=1.21-20240613.152323
+neo_form_version=1.21.4-20241203.161809
 # https://parchmentmc.org/docs/getting-started#choose-a-version
-parchment_minecraft=1.21
-parchment_version=2024.07.07
+parchment_minecraft=1.21.4
+parchment_version=2024.12.07
 ash_version=21.0.1-beta
 
 # Fabric
-fabric_version=0.100.7+1.21
-fabric_loader_version=0.15.11
-modmenu_version=11.0.0
+fabric_version=0.112.2+1.21.4
+fabric_loader_version=0.16.9
+modmenu_version=13.0.0-beta.1
 
 # NeoForge
-neoforge_version=21.0.114-beta
+neoforge_version=21.4.38-beta
 neoforge_loader_version_range=[4,)
 
 # Gradle
